# controlmylights

./: arduino-place.code-workspace  controlmylights.code-workspace
.github/workflows/: build-and-deploy.yaml  build-server.yaml
arduino_client/: .clang-format  .gitignore  config.example.ini  platformio.ini  secrets.example.ini
arduino_client/lib/ws/src/: WsClient.cpp  WsClient.h
arduino_client/src/: logging.cpp  main.cpp
client/: .env.example  env.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
client/public/: site.webmanifest
client/src/: App.tsx  LedCanvas.tsx  LedEasel.tsx  env.d.ts  main.tsx  tailwind.css
client/src/components/: ApiDocRoute.tsx  EaselSaver.tsx  LedShadow.tsx  LedSyncer.tsx  Navbar.tsx  ResponsiveStage.tsx
client/src/contexts/: ApiContext.ts  BreakpointsContext.ts  EaselContext.ts  LedContext.ts  MouseContext.ts  PointerContext.ts
client/src/pages/: ApiDocsPage.tsx  LightControllerPage.tsx
client/src/pages/ApiDocsPage/: ApiDocRoute.tsx  index.tsx
client/src/pages/LightControllerPage/: LedCanvas.tsx  LedEasel.css  LedEasel.tsx  index.tsx
client/src/providers/: ApiProvider.tsx  BreakpointsProvider.tsx  EaselProvider.tsx  LedProvider.tsx  MouseProvider.tsx  PointerProvider.tsx
client/src/repo/: api.ts  easel.ts
server/: .gitignore  Cargo.toml  Cross.toml  Secrets.example.toml  Shuttle.toml  build.rs
server/.cargo/: config.example.toml
server/src/: config.rs  ipinfo_lookup.rs  lib.rs  main.rs  state.rs  tracing.rs  types.rs
server/src/repo/: led.rs
server/src/routers/: api.rs
server/src/routes/: light_bulb_generated.rs  mod.rs
server/src/tasks/: persist.rs
tests/: .env.example  README.md  pyproject.toml
tests/tests/: settings.py  test_loop_leds.py
