[package]
name = "controlmylights"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["ws", "query"] }
axum-client-ip = "0.7.0"
axum-macros = "0.5.0"
axum_thiserror = "0.1.0"
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3.31"
ipinfo = "3.1.1"
multiple_errors = "1.1.0"
opentelemetry = "0.29.0"
opentelemetry-appender-tracing = "0.29.0"
opentelemetry-otlp = "0.29.0"
opentelemetry-stdout = "0.29.0"
opentelemetry_sdk = "0.29.0"
rand = "0.9.0"
serde = "1.0.219"
serde-inline-default = "0.2.3"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }

[build-dependencies]
cargo-emit = "0.2.1"
anyhow = "1.0.97"

[target.x86_64-unknown-linux-gnu]
pre-build = [
	"dpkg --add-architecture $CROSS_DEB_ARCH",
	"apt-get update && apt-get install --assume-yes libssl-dev:$CROSS_DEB_ARCH",
]
