[package]
name = "controlmylights"
version = "0.1.0"
edition = "2021"

[dependencies]
aide = "0.14.2"
anyhow = "1.0.97"
axum = { version = "0.8.3", features = ["ws", "query"] }
axum-client-ip = "0.7.0"
axum_thiserror = "0.1.0"
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3.31"
ipinfo = "3.1.1"
opentelemetry = "0.29.0"
opentelemetry-appender-tracing = "0.29.1"
opentelemetry-otlp = "0.29.0"
opentelemetry_sdk = "0.29.0"
rand = "0.9.0"
serde = "1.0.219"
serde-envfile = "0.1.0"
serde-inline-default = "0.2.3"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }

[build-dependencies]
cargo-emit = "0.2.1"
anyhow = "1.0.97"
