[project]
name = "tests"
version = "0.1.0"
description = ""
authors = [{ name = "Ben", email = "benjamin.colt.tarr@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic-settings (>=2.9.1,<3.0.0)", "selenium (>=4.31.0,<5.0.0)", "pytest (>=8.3.5,<9.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
